<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WinWin</string>
    <string name="app_title">Ingresar a WIN - WIN</string>
    <string name="app_email">email</string>
    <string name="app_password">password</string>
    <string name="app_login">Login</string>
    <string name="app_logo">logo</string>
    <string name="app_user">Usuario</string>
    <string name="app_confirm_pass">Confirmar Password</string>
    <string name="app_register_title">Registro</string>
    <string name="app_conditions">Acepto las políticas de privacidad</string>
    <string name="title_activity_main">WIN WIN</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">WIN WIN</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="app_register">Registrarme</string>
    <string name="title_activity_register">WIN WIN</string>

</resources>
